--- a/RNATranscription/src/main/resources/static/business/task/views/task.html
+++ b/RNATranscription/src/main/resources/static/business/task/views/task.html
@@ -21,7 +21,7 @@
         <th>执行时间</th>
         <th>结束时间</th>
         <th>执行结果</th>
-        <th>下载文件</th>
+        <th>操作</th>
         </thead>
         <tbody>
         <tr ng-repeat="item in taskList track by $index">
@@ -36,6 +36,7 @@
             </td>
             <td>
                 <a class="blue" ng-href='{{"/download/?taskId="+item.id}}' ng-if="item.status=='success'">下载</a>
+                <a class="red" ng-click="deleteTask(item, $index)">删除</a>
             </td>
         </tr>
         <tr ng-show="taskList.length==0||!taskList">
