该下载bug，增加任务检索接口

--- a/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
+++ b/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
@@ -61,7 +61,7 @@
                 <!-- 例子 -->
                 <uib-tab index="1" heading="例子">
                     <div class="app_detail_example download_sample">
-                        <a ng-href='{{"/downloadExample/?id="+sampleId}}'><i class="fa fa-download"></i>下载示例</a>
+                        <a ng-href='{{"/downloadExample?appNum="+sampleId}}'><i class="fa fa-download"></i>下载示例</a>
                     </div>
                 </uib-tab>
             </uib-tabset>
